--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,43 @@ h1{
     font-variation-settings: "wdth" 100;
     font-size: 10vw;
 }
+
+#variable-chars h1 {
+    font-family: "IBM Plex Sans" , system-ui;
+}
+
+h1 span {
+
+ font-weight: 300;
+font-variation-settings: 'wght' 800;
+}
+
+h1 span:nth-child(1) {
+
+    font-weight: 400;
+    font-variation-settings: 'wdht' 400;
+}
+h1 span:nth-child(2) {
+
+    font-weight: 800;
+    font-variation-settings: 'wdht' 800;
+
+}
+h1 span:nth-child(3) {
+
+    font-weight: 200;
+    font-variation-settings: 'wdht' 200;
+
+}
+h1 span:nth-child(4) {
+
+    font-weight: 700;
+    font-variation-settings: 'wdht' 700;
+
+}
+h1 span:nth-child(5) {
+
+    font-weight: 300;
+    font-variation-settings: 'wdht' 300;
+
+}
